--- a/ModernaMediaAngular/src/app/home/homev2/landing/landing.desktop.component.scss
+++ b/ModernaMediaAngular/src/app/home/homev2/landing/landing.desktop.component.scss
@@ -2,7 +2,7 @@
 
 @media screen and (min-width: 570px) {
   .landing .content .titles {
-    height: 100px;
+    height: 136px;
     .super-title {
       font-size: 3.9rem;
     }
@@ -12,6 +12,7 @@
     }
     .subtitle {
       margin-top: 70px;
+      font-size: 1.5rem;
     }
   }
 }
@@ -26,8 +27,13 @@
     .super-title.bg {
     }
     .subtitle {
-      font-size: 2.25rem;
+      font-size: 1.9rem;
       margin-top: 70px;
+    }
+  }
+  .landing .content {
+    .info {
+      font-weight: 600;
     }
   }
 }
@@ -76,6 +82,7 @@
       .info {
         margin-top: -5px;
         font-size: 1.25rem;
+        text-shadow: $text-shadow;
       }
     }
   }
@@ -110,18 +117,18 @@
     .content {
       margin-left: -150px;
       .titles {
-        height: 145px;
+        height: 214px;
         width: 900px;
         .super-title {
-          font-size: 6rem;
+          font-size: 6.55rem;
         }
         .super-title:not(.bg) {
         }
         .super-title.bg {
         }
         .subtitle {
-          margin-top: 100px;
-          font-size: 2rem;
+          margin-top: 105px;
+          font-size: 2.5rem;
           margin-left: 5px;
         }
       }
